Add 3 finger swipe screenshot [3/3]
Change-Id: I0c8b4e4a9457a97051e3008d37c3e73148fc4051

--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -31,4 +31,8 @@
     <string name="touchscreen_hovering_title">Touchscreen hovering</string>
     <string name="touchscreen_hovering_summary">Allows you to hover the screen like a mouse in web browsers, remote desktops, etc</string>
 
+    <!-- Three-fingers-swipe to screenshot -->
+    <string name="swipe_to_screenshot_gesture_title">Swipe to screenshot</string>
+    <string name="swipe_to_screenshot_gesture_summary">Swipe three fingers to take screenshot</string>
+
 </resources>
