Add toggle to enable ADB root
Change-Id: I0d9d69bc05034b4308450baca531305221665966

Settings: Mark adb root toggle as non-persistent

 * It's always read from the binder API

Change-Id: I88234450a2dcfbea985eb3c48114d869db331cd0

Settings: Remove ADBROOT permission from manifest

Change-Id: I2a458cda22b3d370734adb89ff8e0303ca1c8374

Settings: hide ADB Root preference on user builds

Change-Id: I8c9251ddda0eb15e1134d4fafbf3d972f5fa8809

--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -75,4 +75,8 @@
     <string name="security_settings_fingerprint_sensor_location_right">right side</string>
     <string name="security_settings_fingerprint_sensor_location_screen">screen</string>
 
+    <!-- Android debugging as root -->
+    <string name="adb_enable_root">Rooted debugging</string>
+    <string name="adb_enable_summary_root">Allow running Android debugging as root</string>
+
 </resources>
