Settings: add fod option in FP location overlay
we dont want any drawable if the position is FOD

Change-Id: Id953436658b241dfa703a95247beebbf036e2558

--- a/res/values/ev_config.xml
+++ b/res/values/ev_config.xml
@@ -22,6 +22,7 @@
          1 = front
          2 = left side
          3 = right side
+         4 = screen
     -->
     <integer name="config_fingerprintSensorLocation">0</integer>
 
