--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -73,5 +73,6 @@
     <string name="security_settings_fingerprint_sensor_location_front">front</string>
     <string name="security_settings_fingerprint_sensor_location_left">left side</string>
     <string name="security_settings_fingerprint_sensor_location_right">right side</string>
+    <string name="security_settings_fingerprint_sensor_location_screen">screen</string>
 
 </resources>
