--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -58,6 +58,11 @@
             android:title="@string/lockscreen_media_art_title"
             android:defaultValue="true" />
 
+        <evervolv.preference.EVSecureSettingSwitchPreference
+            android:key="lockscreen_translucent_notifications_bg_enabled"
+            android:title="@string/translucent_lockscreen_notifications_bg_title"
+            android:defaultValue="false" />
+
         <SwitchPreference
             android:key="security_setting_lockdown_enabled"
             android:title="@string/lockdown_settings_title"
