--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -94,4 +94,8 @@
     <!-- Jump to lockscreen tuner to let user change lockscreen shortcuts -->
     <string name="open_lockscreen_tuner">Change shortcuts</string>
 
+    <!-- Black theme for dark mode -->
+    <string name="berry_black_theme_title">Pure black</string>
+    <string name="berry_black_theme_summary">Pure black background for dark theme</string>
+
 </resources>
